# CameraSubsystem

./: .clang-format  .gitignore  API_REFERENCE.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  NAMING_CONVENTION.md  README.md  structure.md
cmake/toolchains/: rk3576.cmake
docs/: ARCHITECTURE_REVIEW.md  BOARD_WEB_DEBUG_GUIDE.md  CODEC_SERVER_ARCHITECTURE.md  DMA_BUF_ZERO_COPY_ARCHITECTURE.md  PROJECT_OVERVIEW.md  README.md
docs/diagrams/: camera_subsystem_architecture.html
docs/images/: codec-server-architecture.html  data-path.html  dmabuf-zero-copy-architecture.html  project-structure.html  system-architecture.html
examples/: CMakeLists.txt  camera_publisher_example.cpp  camera_subscriber_example.cpp  dmabuf_smoke_test.cpp  mplane_dmabuf_probe.cpp  mpp_dmabuf_import_probe.cpp  mpp_jpeg_decode_probe.cpp  rga_dmabuf_import_probe.cpp
extensions/codec_server/: CMakeLists.txt  README.md
extensions/codec_server/include/codec_server/: camera_stream_subscriber.h  codec_control_protocol.h  codec_control_server.h  codec_server_app.h  codec_server_config.h  h264_mpp_encoder.h  jpeg_decode_stage.h  recording_file_writer.h  recording_session_manager.h
extensions/codec_server/scripts/: codec-stability-test-rk3576.sh  codec-v1-smoke-rk3576.sh
extensions/codec_server/src/: camera_stream_subscriber.cpp  codec_control_protocol.cpp  codec_control_server.cpp  codec_server_app.cpp  codec_server_config.cpp  h264_mpp_encoder.cpp  h264_mpp_encoder_test.cpp  jpeg_decode_stage.cpp  jpeg_decode_stage_test.cpp  main.cpp  recording_file_writer.cpp  recording_file_writer_test.cpp  recording_session_manager.cpp  recording_session_manager_test.cpp
extensions/web_preview/: .gitignore  README.md
extensions/web_preview/docs/: WEB_PREVIEW_ARCHITECTURE.md
extensions/web_preview/docs/diagrams/: web_preview_architecture.html
extensions/web_preview/gateway/: CMakeLists.txt
extensions/web_preview/gateway/include/web_preview/: base64.h  camera_subscriber_client.h  frame_pipeline.h  gateway_config.h  sha1.h  web_frame_protocol.h  web_server.h
extensions/web_preview/gateway/src/: base64.cpp  camera_subscriber_client.cpp  frame_pipeline.cpp  gateway_config.cpp  main.cpp  sha1.cpp  web_server.cpp
extensions/web_preview/scripts/: build-gateway-rk3576.sh  build-gateway.sh  build-web.sh  deploy-web.sh  web-record-freeze-smoke-rk3576.sh
extensions/web_preview/web/: components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
extensions/web_preview/web/src/: App.css  App.tsx
extensions/web_preview/web/src/components/: ConnectionStatus.tsx  FrameCanvas.tsx  Header.tsx  StreamActions.tsx  StreamGrid.tsx  StreamOverlay.tsx  StreamTile.tsx
extensions/web_preview/web/src/hooks/: useFrameReceiver.ts  useWebSocket.ts
extensions/web_preview/web/src/stores/: useStreamStore.ts
extensions/web_preview/web/src/types/: gateway-command.ts  stream.ts  web-frame-protocol.ts
extensions/web_preview/web/src/utils/: fps-counter.ts  frame-parser.ts  reconnect.ts
include/camera_subsystem/broker/: frame_broker.h  frame_subscriber.h
include/camera_subsystem/camera/: camera_session_manager.h  camera_source.h
include/camera_subsystem/core/: buffer_guard.h  buffer_pool.h  buffer_state.h  camera_config.h  dma_buf_sync.h  frame_descriptor.h  frame_handle.h  frame_handle_ex.h  frame_lease.h  types.h
include/camera_subsystem/ipc/: camera_channel_contract.h  camera_control_client.h  camera_control_ipc.h  camera_control_server.h  camera_data_ipc.h  camera_data_plane_v2.h
include/camera_subsystem/platform/: platform_epoll.h  platform_logger.h  platform_thread.h
include/camera_subsystem/utils/: signal_handler.h
scripts/: build-rk3576.sh  build.sh  count_loc.sh  deploy-rk3576-web-debug.sh  format.sh  rk3576-dataplane-v2-slow-consumer-smoke.sh  rk3576-fullstack-web-test.sh
src/broker/: frame_broker.cpp
src/camera/: camera_session_manager.cpp  camera_source.cpp
src/core/: buffer_guard.cpp  buffer_pool.cpp  camera_config.cpp  dma_buf_sync.cpp  frame_descriptor.cpp  frame_handle.cpp  frame_lease.cpp  types.cpp
src/ipc/: camera_control_client.cpp  camera_control_server.cpp  camera_data_plane_v2.cpp
src/platform/: platform_epoll.cpp  platform_logger.cpp  platform_thread.cpp
src/utils/: signal_handler.cpp
tests/: CMakeLists.txt
tests/stress/: camera_source_stress_test.cpp  frame_broker_stress_test.cpp  platform_stress_test.cpp
tests/unit/: test_buffer_lifecycle.cpp  test_buffer_pool.cpp  test_camera_config.cpp  test_camera_control_ipc.cpp  test_camera_data_plane_v2.cpp  test_camera_session_manager.cpp  test_frame_descriptor.cpp  test_frame_handle.cpp
